--- a/ScrappingManagement.Web/Views/Quotes/Print.cshtml
+++ b/ScrappingManagement.Web/Views/Quotes/Print.cshtml
@@ -105,6 +105,9 @@ var forceHalfPage =  Model.Products.Count <= 9;
                 <td><strong>Date:</strong> @Model.Date.ToString("dd-MMMM-yyyy")</td>
                 <td><strong>Location:</strong> @Model.Location</td>
             </tr>
+            <tr>
+                <td><strong>Status:</strong> @Model.Status</td>
+            </tr>
         </table>
 
         
