--- a/ScrappingManagement.Web/Views/Quotes/Create.cshtml
+++ b/ScrappingManagement.Web/Views/Quotes/Create.cshtml
@@ -25,6 +25,11 @@
             <input asp-for="Location" class="form-control" required />
         </div>
         <div class="col-md-4">
+            <label asp-for="Status" class="form-label">Status</label>
+            <select asp-for="Status" class="form-select" asp-items="ViewBag.QuoteStatuses as SelectList"></select>
+            <span asp-validation-for="Status" class="text-danger"></span>
+        </div>
+        <div class="col-md-4">
             <label asp-for="Date" class="form-label">Date</label>
             <input asp-for="Date" class="form-control" type="date" />
         </div>
