--- a/ScrappingManagement.Web/Views/Quotes/Details.cshtml
+++ b/ScrappingManagement.Web/Views/Quotes/Details.cshtml
@@ -17,6 +17,8 @@
         <dd class="col-sm-10">@Model.Location</dd>
         <dt class="col-sm-2">Supplier</dt>
         <dd class="col-sm-10">@Model.SupplierName</dd>
+        <dt class="col-sm-2">Status</dt>
+        <dd class="col-sm-10">@Model.Status</dd>
         <dt class="col-sm-2">Final Total</dt>
         <dd class="col-sm-10">@Model.FinalTotal</dd>
     </dl>
