--- a/ScrappingManagement.Web/Views/Quotes/Index.cshtml
+++ b/ScrappingManagement.Web/Views/Quotes/Index.cshtml
@@ -60,7 +60,7 @@
                 <td>@quote.Date.ToString("dd-MMMM-yyyy")</td>
                 <td>@quote.Supplier?.Name</td>
                 <td>@quote.Location</td>
-                <td>@quote.Status</td>
+                <td class="success">@quote.Status</td>
                 <td>@quote.FinalTotal</td>
                 <td>@quote.QuoteProducts.Count</td>
                 <td>
